--- a/styles/global.css
+++ b/styles/global.css
@@ -4,3 +4,31 @@
 .test {
     color :red;
 }
+
+#video {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 99999;
+    transition: 0.5s;
+}
+
+#video.active {
+    transition-delay: 0.5s;
+    transform: translate(-50%, -50%) scale(1);
+}
+
+#video video {
+    max-width: 900px;
+    border: 10px solid #fff;
+}
+
+body {
+    background-color: grey;
+}
