--- a/pageTheme/style.css
+++ b/pageTheme/style.css
@@ -172,3 +172,9 @@ body {
     opacity: 0.5;
     cursor: not-allowed;
   }
+
+  #degradeContainer {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
