--- a/pageTheme/style.css
+++ b/pageTheme/style.css
@@ -170,9 +170,9 @@ button {
   text-decoration: none;
   cursor: pointer;
   border: 2px solid #888;
-  color: #888;
+  color: white;
   border-radius: 5px;
-  background-color: rgba(136, 136, 136, 0.2);
+  background-color: rgba(255, 255, 255, 0.2);
   transition: background-color 0.3s, color 0.3s;
 }
 
@@ -200,7 +200,7 @@ button.disabled {
   bottom: 20px;
   right: 10px;
   padding: 15px;
-  background-color: rgba(136, 136, 136, 0.2);
+  background-color: rgba(255, 255, 255, 0.2);
   border-radius: 10px;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   z-index: 10000;
@@ -212,4 +212,53 @@ button.disabled {
   flex-direction: row;
   flex-wrap: wrap;
   align-items: center;
+}
+
+.button-container {
+  top: 10px;
+  left: 10px;
+  display: flex;
+  flex-direction: row;
+}
+
+#themeContainer {
+  display: none;
+  flex-direction: row;
+  transition: transform 0.5s ease-in-out;
+  transform: translateX(-100%);
+  padding: 15px 30px;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  color: #888;
+  border-radius: 5px;
+  background-color: rgba(255, 255, 255, 0.2);
+  transition: background-color 0.3s, color 0.3s;
+}
+
+#themeContainer.visible {
+  display: flex;
+  transform: translateX(0%);
+}
+
+.theme-circle {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.theme-circle.animate {
+  animation: fadeIn 0.5s ease-in-out;
+}
+
+@keyframes fadeIn {
+  from {
+      opacity: 0;
+  }
+  to {
+      opacity: 1;
+  }
 }
