--- a/styles/global.css
+++ b/styles/global.css
@@ -1,5 +1,8 @@
 * {
     margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .hidden {
@@ -39,7 +42,16 @@ body {
     height: 100%;
     overflow: hidden;
 }
-
+#tout {
+    display: flex;
+    flex-direction: column;
+    width: 100vh;
+    justify-content: center;
+}
+#contenu {
+    flex-grow: 1;
+    overflow-y: auto;
+}
 #inventory {
     background-color: aquamarine;
     position: absolute;
@@ -47,6 +59,7 @@ body {
     width: inherit;
     justify-content: space-evenly;
     display:flex;
+    justify-items: center;
 
     height: 0px;
     -webkit-transition: height 0.5s linear;
@@ -54,6 +67,7 @@ body {
         -ms-transition: height 0.5s linear;
          -o-transition: height 0.5s linear;
             transition: height 0.5s linear;
+    flex-shrink: 1;
 }
 
 #inventory.active {
@@ -66,9 +80,10 @@ body {
 }
 
 img.charlie {
-    width: 150px;
-    height: 150px;
+    width: 100px;
+    height: 100px;
     filter: brightness(0%);
+    margin-top: 20px;
 }
 
 #btn_inv {
@@ -123,4 +138,11 @@ img.charlie {
     position: absolute;
     left: 15px;
     top: 718px;
+}
+.charlie_trouve{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 10px;
+    height: 10px;
 }
