--- a/pageTheme/style.css
+++ b/pageTheme/style.css
@@ -262,3 +262,22 @@ button.disabled {
       opacity: 1;
   }
 }
+
+@media only screen and (max-width: 600px) {
+  button {
+    padding: 15px 30px;
+    font-size: 20px;
+    border-radius: 5px;
+    transition: background-color 0.3s, color 0.3s;
+  }
+
+  #slidersContainer {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .slider {
+    width: 90%;
+  }
+}
