--- a/styles/global.css
+++ b/styles/global.css
@@ -1,9 +1,25 @@
 * {
     margin: 0;
     padding: 0;
-    width: 100%;
-    height: 100%;
+    width: auto;
+    height: auto;
 }
+
+@-moz-document url-prefix() { /* Disable scrollbar Firefox */
+    html{
+      scrollbar-width: none;
+    }
+  }
+  body {
+    margin: 0; /* remove default margin */
+    scrollbar-width: none; /* Also needed to disable scrollbar Firefox */
+    -ms-overflow-style: none;  /* Disable scrollbar IE 10+ */
+    overflow-y: scroll;
+  }
+  body::-webkit-scrollbar {
+    width: 0px;
+    background: transparent; /* Disable scrollbar Chrome/Safari/Webkit */
+  }
 
 .hidden {
     display: none !important;
@@ -40,14 +56,19 @@ body {
     background-color: grey;
     width: 100%;
     height: 100%;
-    overflow: hidden;
 }
+
+body::-webkit-scrollbar {
+    display: none; /* for Chrome, Safari, and Opera */
+}
+
 #tout {
     display: flex;
     flex-direction: column;
     width: 100vh;
     justify-content: center;
 }
+
 #contenu {
     flex-grow: 1;
     overflow-y: auto;
@@ -56,7 +77,7 @@ body {
     background-color: aquamarine;
     position: absolute;
     bottom:0;
-    width: inherit;
+    width: 100%;
     justify-content: space-evenly;
     display:flex;
     justify-items: center;
@@ -84,6 +105,13 @@ img.charlie {
     height: 100px;
     filter: brightness(0%);
     margin-top: 20px;
+    visibility: hidden;
+    transition: all 0.5s ease-out;
+}
+
+img.charlie.active {
+    visibility: visible;
+    transition: all 0.5s ease-out;
 }
 
 #btn_inv {
@@ -118,8 +146,7 @@ img.charlie {
 
 #chapeau_trouve {
     position: absolute;
-    left: 160px;
-    top: 0;
+    bottom:-20%;
 }
 
 #tete_trouve {
@@ -139,10 +166,8 @@ img.charlie {
     left: 15px;
     top: 718px;
 }
-.charlie_trouve{
+/* .charlie_trouve{
     position: absolute;
     left: 0;
     top: 0;
-    width: 10px;
-    height: 10px;
-}
+} */
